Fixed Spacing Between Button and Prompt

--- a/cards.css
+++ b/cards.css
@@ -29,7 +29,7 @@ header h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
     
     border: 1px;
     border-radius: 10px;
@@ -49,7 +49,7 @@ button {
     padding: 15px 32px;
     text-align: center;
     font-size: 16px;
-
+    border-radius: 10px;
 
     margin: 0;
     position: absolute;
